# data-viewer

./: .gitignore  README.md
server/: pyproject.toml
server/src/: main.py
server/src/data_viewer_api/: error_handler.py  handler.py  routes.py
server/tests/: common.py  test_data_handler.py  test_upload_file.py
server/tests/resources/: df.csv  df.parquet  df_huge.parquet
