[tool.poetry]
name = "data-viewer"
version = "0.0.1"
authors = ["Data Viewer Backend"]
description = "Data Viewer for all popular formats, including CSV, Parquet and others."

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.11.1"
fastapi = "0.115.2"
pydantic = "2.9.2"
pandas = "2.2.3"
pyarrow = "17.0.0"
numpy = "1.26.3"
uvicorn = "0.31.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
pytest-dotenv = "^0.5.2"
setuptools = "*"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
env_files = ["test.env"]